<resources>
    <string name="app_name">UKIKU</string>
    <string name="title_activity_main">UKIKU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="directory_channel_title">Actualizacion de directorio</string>

    <string name="theme_default">3</string>

    <string-array name="theme_options">
        <item>Automático</item>
        <item>Dia</item>
        <item>Noche</item>
    </string-array>
    <string-array name="theme_values">
        <item>3</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="storage_type">
        <item>Memoria interna</item>
        <item>Tarjeta SD</item>
    </string-array>
    <string-array name="storage_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="recents_type">
        <item>Lista</item>
        <item>Home</item>
    </string-array>
    <string-array name="recents_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="recents_options">
        <item>Nunca</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>45 minutos</item>
        <item>60 minutos</item>
    </string-array>
    <string-array name="recents_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="timeout_options">
        <item>10 segundos</item>
        <item>20 segundos</item>
        <item>30 segundos</item>
        <item>Ilimitado</item>
    </string-array>
    <string-array name="timeout_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>0</item>
    </string-array>
    <string-array name="dir_options">
        <item>Nunca</item>
        <item>Diario</item>
        <item>2 dias</item>
        <item>3 dias</item>
        <item>4 dias</item>
        <item>5 dias</item>
        <item>6 dias</item>
        <item>Semanalmente</item>
    </string-array>
    <string-array name="dir_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="player_options">
        <item>Interno</item>
        <item>Externo</item>
    </string-array>
    <string-array name="player_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="layType_options">
        <item>Lista</item>
        <item>Cuadrícula</item>
    </string-array>
    <string-array name="layType_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="player_resize_options">
        <item>Ajustar video</item>
        <item>Llenar pantalla</item>
        <item>Llenar ancho</item>
        <item>Llenar largo</item>
    </string-array>
    <string-array name="player_resize_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="buffer_size">
        <item>1kb</item>
        <item>2kb</item>
        <item>4kb</item>
        <item>8kb</item>
        <item>16kb</item>
        <item>32kb</item>
        <item>64kb</item>
    </string-array>
    <string-array name="buffer_size_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
    </string-array>
    <string-array name="parallel_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="downloader_type">
        <item>Clásico</item>
        <item>Multiple</item>
    </string-array>
    <string-array name="downloader_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="autobackup">
        <item>Nunca</item>
        <item>Diariamente</item>
        <item>Cada 3 días</item>
        <item>Cada 5 días</item>
        <item>Semanalmente</item>
    </string-array>
    <string-array name="autobackup_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>
    <string-array name="savetype_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="savetype">
        <item>Nombre</item>
        <item>ID</item>
    </string-array>
    <string-array name="list_states">
        <item>Ninguno</item>
        <item>Viendo</item>
        <item>Considerando</item>
        <item>Completado</item>
        <item>Dropeado</item>
        <item>Pausado</item>
    </string-array>
    <string name="shortcut_fav_short">Favoritos</string>
    <string name="shortcut_fav_long">Animes favoritos</string>
    <string name="shortcut_dir_short">Directorio</string>
    <string name="shortcut_dir_long">Animes en directorio</string>
    <string name="shortcut_explorer_short">Explorador</string>
    <string name="shortcut_explorer_long">Explorador</string>
    <string name="shortcut_emision_short">Emisión</string>
    <string name="shortcut_emision_long">Animes en emisión</string>
    <string name="shortcut_disable_flat">Flat design</string>
    <string name="shortcut_disable_classic">Classic design</string>

    <string-array name="theme_colors">
        <item>Rojo</item>
        <item>Rosa</item>
        <item>Morado</item>
        <item>Morado obscuro</item>
        <item>Indigo</item>
        <item>Azul</item>
        <item>Azul claro</item>
        <item>Cyan</item>
        <item>Verde azulado</item>
        <item>Verde</item>
        <item>Verde claro</item>
        <item>Lima</item>
        <item>Amarillo</item>
        <item>Ambar</item>
        <item>Naranja</item>
        <item>Naranja obscuro</item>
        <item>Café</item>
        <item>Gris</item>
        <item>Gris azulado</item>
    </string-array>

    <string-array name="theme_colors_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

    <string-array name="design_options">
        <item>Flat</item>
        <item>Clasico</item>
    </string-array>
    <string-array name="recents_action_options">
        <item>Streaming</item>
        <item>Descarga</item>
    </string-array>
    <string-array name="design_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_eam">Mapa</string>
    <string name="title_activity_eamap">Map</string>
</resources>
